# generate_db

./: CMakeLists.txt  README.md
include/: Constants.hpp  MyFreetype.hpp  operations.hpp  trace.hpp
src/: Constants.cpp  MyFreetype.cpp  main.cpp  operations.cpp
